--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     body {
       margin: 0;
       padding: 0;
-      height: 100vh;
-      width: 100vw;
+      min-height: 100vh;
+      min-width: 100vw;
+      overflow-y: hidden;
     }
   </style>
   <body>
